# mobile-sps

./: .dockerignore  .env fly  .gitattributes  .gitignore  Assistente_Spart.rar  CORRECOES_404.md  Caddyfile  ContasPagarList.js  ContasReceberList.js  DOC_ARQUITETURA_FISCAL.md  Dockerfile  GUIA_FINAL_ESTOQUE_PEDIDOS.md  README.md  api.js  bancos.json  build-turbo.sh  check.py  check_tables.py  create_workflow_tables.py  db.sqlite3  db_configs.json  debug.json  debug_cts.py  debug_dash_viewset.py  debug_entidades_viewset.py  debug_images.py  debug_sql.py  debug_viewset.py  docker-compose.yml  docker-entrypoint.sh  eletro.session.sql  fake_migration.py  fake_migrations.py  fly.toml  gunicorn.conf.py  inspect_nota.py  inspect_pynfe.py  instrucoes.md  list_urls.py  manage.py  (+17 more)
.trae/: debug.json
Agricola/: apps.py  models.py  registry.py  signals.py  views.py
Assistente_Spart/: Home.js  agenteReact.py  apps.py  urls.py  views.py
Auth/: backends.py  models.py  serializers.py  urls.py  views.py
CFOP/: apps.py  cst_utils.py  defaults_cfop.py  models.py  readme  views.py
CaixaDiario/: README.md  __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
CentrodeCustos/: apps.py  forms.py  models.py  service.py  (+2 more)
music_voice_agents/: README.md  pyproject.toml
music_voice_agents/app/: main.py  schemas.py
music_voice_agents/app/agents/: orchestrator.py
music_voice_agents/app/api/: routes.py
music_voice_agents/app/services/: musicxml.py  storage.py  tts.py
music_voice_agents/app/static/: index.html
music_voice_agents/tests/: test_schemas.py
(+1985 files in other folders)
