[project]
name = "music-voice-agents"
version = "0.1.0"
description = "Scaffold de agentes Agno para leitura de partitura e canto por voz SATB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "music21>=9.1.0",
  "openai>=1.40.0",
  "agno>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
